Update LicenseRegistry.java